# CProjectWithTests

./: .gitignore  CMakeLists.txt  build.bat  check_functions.py  simple_test.py  test.bat
.github/workflows/: ci.yml  fix-encoding.yml
calculator/: .gitignore  CMakeLists.txt  calculator.c  calculator.h  error_handling.c  error_handling.h  main.c  main_temp.c  version.h
calculator/.github/workflows/: ci.yml
calculator_tests/: auto_test_version.py  lib_loader.py  main.py  performance_tests.py  quick_test.bat  run_from_root.py  security_tests.py  test_calculator.py  test_interfaces.py  test_version.py
